--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -296,7 +296,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/hero-bg.jpg") top right;
+  background: url("../img/hero-bg.jpeg") top right;
   background-size: cover;
   position: relative;
 }
@@ -748,7 +748,7 @@ section {
 --------------------------------------------------------------*/
 .testimonials {
   padding: 80px 0;
-  background: url("../img/testimonials-bg.jpg") no-repeat;
+  background: url("../img/testimonials-bg.jpeg") no-repeat;
   background-position: center center;
   background-size: cover;
   position: relative;
@@ -1268,7 +1268,7 @@ section {
 # Footer
 --------------------------------------------------------------*/
 #footer {
-  background: url("../img/footer-bg.jpg") top center no-repeat;
+  background: url("../img/footer-bg.jpeg") top center no-repeat;
   background-size: cover;
   color: #fff;
   font-size: 14px;
